# autonomous-metal

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  feature-engineering-pipeline.py  forecast-model-training-pipeline.py  label-preparation-pipeline.py  prepare-training-data-pipeline.py  pyproject.toml  requirement.txt  requirements.txt  run-api.sh  run-experiment.sh  sample-report-1.md  sample-report-2.md  sample-report.md
.github/workflows/: pre-commit.yml  pylint.yml
api/: main.py
artifacts/: all-x.pkl  autoencoder-model.keras  feature-interpretation.json  feature-scaler.pkl  features-set.pkl  features.csv  lme-al-forecast-model-1-days-ahead.keras  lme-al-forecast-model-2-days-ahead.keras  lme-al-forecast-model-3-days-ahead.keras  lme-al-forecast-model-4-days-ahead.keras  lme-al-forecast-model-5-days-ahead.keras  lme-al-forecast-model.keras  spot-prices.csv  training-x.pkl  training-y.pkl
core/: graph.py  model.py  prompts.py  retriever.py  retriver.py  utils.py
pipelines/: feature-engineering-pipeline.py  fetch-data-kaggle-pipeline.py  forecast-model-training-pipeline.py  label-preparation-pipeline.py  performance-evaluation-pipeline.py  prepare-training-data-pipeline.py
